static/static.css
/* Remove browser default spacing */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    margin: 0;
    padding: 0;
}

/* Loader */
#loader{

    position: fixed;
    top:0;
    left:0;

    width:100%;
    height:100vh;

    background:#000;

    display:flex;
    justify-content:center;
    align-items:center;

    z-index:9999;

    transition: transform 1.2s ease-in-out;

}

#loader img{
    width: 260px;
    height: auto;
}
.hide-loader{
    transform: translateY(-100%);
}
.navbar{
    padding:15px 24px;
}



.logo{
    display: flex;
    align-items: center;
    gap: 15px;

    position: relative;
    left: -30px;   /* Move left */
}

.logo h2{
    color:white;
    font-size:30px;
    font-weight:600;
}
.logo img{
    width: 130px;
    height: auto;
}
.logo{
    margin-top: -25px;
}
#loader img{
    width: 280px;
    animation: fadeIn 1.5s ease;
}
@keyframes fadeIn{
    from{
        opacity:0;
        transform:scale(0.8);
    }

    to{
        opacity:1;
        transform:scale(1);
    }
}
.hero{
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;  
    width: 100%;
    padding-right: 60px;
    padding-top: 30px;
}

.hero-text{
    width:45%;
}

.hero-image{
    transform: translateY(-105px);
}

.hero-image img{
    width: 550px;
    max-width: 650px;

    filter: drop-shadow(0 35px 40px rgba(0,0,0,.15));
}

.cat{
    position: absolute;
    top: 123px;
    right: 260px;
    width: 90px;
    z-index: 20;
}

.cat img{
    width: 120px;
}
.hero-text{
    position:absolute;
    left:120px;
    top:280px;
}

.hero-text h1{
    font-size:72px;
    font-weight:700;
    color:#111;
}


.hero-title{
    overflow:hidden;
}

.hero-title .char{
    display:inline-block;
    transform-origin:50% 100%;
}
body{
    min-height:300vh;
}
.hero::before{
    content: "";

    position: absolute;

    width: 900px;
    height: 900px;

    right: -180px;
    top: -220px;

    border-radius: 50%;

    background:
        radial-gradient(
            circle,
            rgba(255,245,215,0.95) 0%,
            rgba(255,241,190,0.65) 18%,
            rgba(255,248,225,0.30) 45%,
            rgba(255,255,255,0) 75%
        );

    filter: blur(130px);

    pointer-events: none;

    z-index: -1;
}
.hero::after{
    content:"";

    position:absolute;

    width:1200px;
    height:1200px;

    right:-350px;
    top:-350px;

    border-radius:50%;

    background:
        radial-gradient(
            circle,
            rgba(255,252,245,.55) 0%,
            rgba(255,250,235,.18) 55%,
            transparent 80%
        );

    filter: blur(220px);

    pointer-events:none;

    z-index:-2;
}
.bulb{
    position:absolute;

    top:-10px;
    left:1000px;

    width:140px;

    z-index:100;

    transform-origin:50% 0%;
}



.bulb::after{
    content:"";

    position:absolute;

    width:300px;
    height:300px;

    left:50%;
    top:55%;

    transform:translate(-50%,-50%);

    border-radius:50%;

    background:
radial-gradient(
    circle at center,
    rgba(255, 248, 220, 0.95) 0%,
    rgba(255, 232, 170, 0.75) 18%,
    rgba(255, 215, 120, 0.45) 38%,
    rgba(255, 180, 80, 0.20) 60%,
    rgba(255, 150, 40, 0.08) 78%,
    rgba(255, 120, 20, 0.00) 100%
);

    filter:blur(90px);
    animation: bulbGlow 4s ease-in-out infinite;

    z-index:-1;

    pointer-events:none;
}
.bulb.on::after{
    opacity:1;
}
.bulb img{
    width:80%;
    display:block;
}
@keyframes bulbGlow {

    0%,100%{
        opacity: .82;
        transform: translate(-50%, -50%) scale(1);
    }

    50%{
        opacity: 1;
        transform: translate(-50%, -50%) scale(1.08);
    }

}

